plugins {
    id 'application'
    id 'java-library'
    id 'maven-publish'
    id 'org.javamodularity.moduleplugin' version '1.8.9'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id "org.beryx.jlink" version "3.1.0-rc-1"
    id 'com.gradleup.shadow' version '8.3.5'
}

repositories {
    mavenCentral()
}

group 'io.defalut'
version '1.0'
description = 'MyApp'
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'io.defalut.app'
    mainClass = 'io.defalut.app.AppLauncher'
}

javafx {
    version = '21'
    modules = ['javafx.controls']
}

dependencies {
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
}

jar {
    manifest {
        attributes  'Main-Class': 'io.defalut.app.AppLauncher',
                'Module-Name': 'io.defalut.app'
    }
}

jlink {
    options = [
            '--strip-debug',
            '--compress', '1',
            '--no-header-files',
            '--no-man-pages',
            '--add-modules', 'javafx.controls'
    ]
    launcher {
        name = 'MyApp'
    }

    forceMerge('log4j-api')

    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
            imageOptions += ['--win-console']
        }
        if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
            installerOptions += ['--mac-package-identifier', 'io.defalut.app']
            imageOptions += ['--mac-package-name', 'MyApp']
        }
        if (org.gradle.internal.os.OperatingSystem.current().linux) {
            installerOptions += ['--linux-package-name', 'MyApp']
            imageOptions += ['--linux-package-name', 'MyApp']
        }
    }

    shadowJar {
        archiveBaseName = 'MyApp'
        archiveVersion = '1.0'
        manifest {
            attributes(
                    'Main-Class': 'io.defalut.app.AppLauncher',
                    'Module-Name': 'io.defalut.app'
            )
        }
    }


}